# Lessons

./: .gitignore  README.md
Game/projekt/: CMakeLists.txt
List1/: README.md  zadLista1  zadLista1.cpp
List2/: README.md  inputValidation.cpp  zadLista2.cpp
List3/: CMakeLists.txt  Instruction.txt  README.md  ex1Functions.cpp  ex2Functions.cpp  ex3Functions.cpp  ex4Functions.cpp  ex5Functions.cpp  inputValidation.cpp  zadLista3.cpp  zadLista3Gtest.cpp
List3/include/: ex1Functions.h  ex2Functions.h  ex3Functions.h  ex4Functions.h  ex5Functions.h  inputValidation.h
List3/src/: ex1Functions.cpp  ex2Functions.cpp  ex3Functions.cpp  ex4Functions.cpp  ex5Functions.cpp  inputValidation.cpp  main.cpp
List4/: README.md  ex1List4Functions.cpp  ex2List4Functions.cpp  ex2list4functions.cpp  inputValidation.cpp  zadLista4.cpp
List5/: README.md  ex1Functions.cpp  zadLista5  zadLista5.cpp
List6/: README.md  exercise1.cpp  exercise2.cpp  zadLista6.cpp
List7/: exercise1.cpp  exercise2.cpp  zadLista7  zadLista7.cpp
LoginAndRegistationSystem/: .gitignore  LoginAndRegistationSystem.sln  LoginAndRegistationSystem.vcxproj  LoginAndRegistationSystem.vcxproj.filters  LoginAndRegistrationSystem.cpp  LoginAndRegistrationSystem.vcxproj  LoginAndRegistrationSystem.vcxproj.filters  README.md  SQLHandle.cpp  SQLHandle.h  changePassword.cpp  changePassword.h  deleteUser.cpp  deleteUser.h  displayUsers.cpp  displayUsers.h  refreshID.cpp  systemSleep.h  userLogin.cpp  userLogin.h  userLogout.cpp  userLogout.h  userMenu.cpp  userMenu.h  userRegister.cpp  userRegister.h  Źródło.cpp
(+47 files in other folders)
